Fix #105, wrap long description lines.

--- a/src/system/modules/!composer/assets/css/backend.css
+++ b/src/system/modules/!composer/assets/css/backend.css
@@ -195,6 +195,9 @@ span.stability-dev {
 .col_name .name {
 	color: maroon;
 }
+.col_name .description {
+	white-space: normal;
+}
 .col_name .description p {
 	color: #666;
 	margin-top: 12px;
